--- a/client/www/index.html
+++ b/client/www/index.html
@@ -12,6 +12,10 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <script src="http://localhost:1337/js/dependencies/sails.io.js"></script>
+    <script>
+      io.sails.url = "http://localhost:1337";
+    </script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -21,7 +25,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>    
+    <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
     <!--
