--- a/client/www/index.html
+++ b/client/www/index.html
@@ -11,7 +11,7 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-
+    <script src="lib/lodash/lodash.js"></script>
     <script src="http://localhost:1337/js/dependencies/sails.io.js"></script>
     <script>
       io.sails.url = "http://localhost:1337";
@@ -24,7 +24,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/controllers.js"></script>    
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
